--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@forward '@lucca-front/icons/src/main';
+
+@forward '@lucca-front/scss/src/main';
+@forward '@lucca-front/scss/src/components/container';
+@forward '@lucca-front/scss/src/components/main';
+
+@forward '@lucca-front/ng/src/main';
